--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "prettier": "prettier --config .prettierrc \"**/*.js\" --write",
-    "lint": "eslint --config=./.eslintrc index.js",
+    "lint":     "eslint . --ext .ts",
     "build": "npx tsc",
     "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine",
@@ -22,14 +22,17 @@
     "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^6.0.0",
     "nodemon": "^2.0.6",
-    "prettier": "^2.5.1"
-   
+    "prettier": "^2.5.1",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
-    "typescript": "^4.0.5",
     "@types/express": "^4.17.8",
     "@types/jasmine": "^3.6.3",
     "@types/node": "^14.14.6",
-    "ts-node": "^9.0.0"
+    "@types/sharp": "^0.30.5",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5"
   }
 }
