--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "fsjd_image_api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Image Processing API project, full stack javascript developer, udacity",
   "main": "index.ts",
+
+
   "scripts": {
     "prettier": "prettier --config .prettierrc \"**/*.js\" --write",
-    "lint":     "eslint . --ext .ts",
+    "lint": "eslint . --ext .ts",
     "build": "npx tsc",
     "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine",
     "start": "nodemon src/index.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "daddy2054",
   "license": "ISC",
   "dependencies": {
     "eslint": "^8.8.0",
