--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "1.0.0",
   "description": "Image Processing API project, full stack javascript developer, udacity",
   "main": "index.ts",
-
-
   "scripts": {
     "prettier": "prettier --config .prettierrc \"**/*.js\" --write",
     "lint": "eslint . --ext .ts",
@@ -25,13 +23,15 @@
     "jasmine-spec-reporter": "^6.0.0",
     "nodemon": "^2.0.6",
     "prettier": "^2.5.1",
-    "sharp": "^0.30.7"
+    "sharp": "^0.30.7",
+    "supertest": "^6.2.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/jasmine": "^3.6.3",
     "@types/node": "^14.14.6",
     "@types/sharp": "^0.30.5",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "ts-node": "^9.0.0",
