--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
   "author": "daddy2054",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
+    "sharp": "^0.30.7"
+  },
+  "devDependencies": {
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "express": "^4.17.1",
     "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^6.0.0",
     "nodemon": "^2.0.6",
     "prettier": "^2.5.1",
-    "sharp": "^0.30.7",
-    "supertest": "^6.2.4"
-  },
-  "devDependencies": {
+    "supertest": "^6.2.4",
     "@types/express": "^4.17.8",
     "@types/jasmine": "^3.6.3",
     "@types/node": "^14.14.6",
